@@ -253,6 +253,9 @@ Trunk (unreleased changes)
     HADOOP-7361. Provide an option, -overwrite/-f, in put and copyFromLocal
     shell commands.  (Uma Maheswara Rao G via szetszwo)
 
+    HADOOP-7430. Improve error message when moving to trash fails due to 
+    quota issue. (Ravi Prakash via mattf)
+
   OPTIMIZATIONS
   
     HADOOP-7333. Performance improvement in PureJavaCrc32. (Eric Caspole
